vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -179,6 +179,8 @@
         "ESRCH",
         "Errno",
         "Excon",
+        "FOSS",
+        "Finalizer",
         "Fixnum",
         "Fransmanni",
         "Gemfile",
@@ -211,6 +213,7 @@
         "Noindex",
         "Nokto",
         "Npgsql",
+        "Nystrom's",
         "Oleg",
         "Owin",
         "PEBKAC",
@@ -227,6 +230,7 @@
         "SIGTERM",
         "SYSCALL",
         "Samarien",
+        "Serializable",
         "Silverlight",
         "Smedsby",
         "Solf",
@@ -244,6 +248,7 @@
         "Zabbix",
         "adoptopenjdk",
         "agapao",
+        "agentd",
         "ansible",
         "appfactory",
         "arity",
@@ -264,6 +269,7 @@
         "canonicalize",
         "changeit",
         "changelog",
+        "chaosdev",
         "chdir",
         "cmocka",
         "conditionalize",
@@ -271,6 +277,7 @@
         "couchdb",
         "cpus",
         "crontab",
+        "cslox",
         "customised",
         "dconf",
         "deallocation",
@@ -279,6 +286,8 @@
         "deststorepass",
         "deststoretype",
         "devcert",
+        "dnaip",
+        "docfx",
         "downcase",
         "downto",
         "dylib",
@@ -313,8 +322,9 @@
         "jacoco",
         "javax",
         "jcmd",
+        "jlox",
+        "journalctl",
         "jsonapi",
-        "k",
         "kernelfs",
         "keyalg",
         "keypasswd",
@@ -328,6 +338,7 @@
         "loveth",
         "lxdbr",
         "mariadb",
+        "markdownify",
         "mixins",
         "mkdir",
         "modifyvm",
@@ -352,6 +363,7 @@
         "ostruct",
         "pacman",
         "paginator",
+        "paramiko",
         "passthrough",
         "perlun",
         "pescetarian",
@@ -366,6 +378,7 @@
         "progname",
         "promxy",
         "proto",
+        "protobuf",
         "protoevangelium",
         "qunit",
         "r",
