vscode: Change autoSave setting
The previous setting was to automatically save files after a certain
delay. This didn't play very well with the 'make autobuild' mechanism I
have in place in the halleluja.nu repo
(https://github.com/perlun/halleluja.nu); the auto-rebuilding would be
triggered by the automatic saving. When writing longer, more substantial
texts, this felt a bit overkill. Changing the timeout to a longer period
would perhaps also work equally well, or even better.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -509,6 +509,6 @@
         }
     ],
     "go.useLanguageServer": true,
-    "files.autoSave": "afterDelay",
+    "files.autoSave": "onWindowChange",
     "terminal.integrated.shell.linux": "/bin/bash"
 }
