vscode; Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -185,7 +185,9 @@
         "Fransmanni",
         "Gemfile",
         "HTTPOK",
+        "Havilah",
         "Hejlsberg",
+        "Hiddekel",
         "Hubi",
         "ICMP",
         "JDBC",
@@ -222,6 +224,7 @@
         "PREPEND",
         "Paran",
         "Paulus",
+        "Pison",
         "Postgre",
         "Postgres",
         "RXDESC",
@@ -252,6 +255,7 @@
         "ansible",
         "appfactory",
         "arity",
+        "asciinema",
         "autoinject",
         "axelf",
         "b",
@@ -295,6 +299,7 @@
         "enqueues",
         "eval",
         "executables",
+        "favicon",
         "favourite",
         "fieldops",
         "findutils",
@@ -302,6 +307,7 @@
         "getpgid",
         "getpid",
         "gnugp",
+        "goeth",
         "graphql",
         "gsettings",
         "gsub",
@@ -342,6 +348,7 @@
         "mixins",
         "mkdir",
         "modifyvm",
+        "moveth",
         "mtime",
         "mutex",
         "mydomain",
@@ -417,6 +424,7 @@
         "textblocks",
         "tillbedjare",
         "timestamps",
+        "tocrel",
         "transpiler",
         "trello",
         "ttf",
