vscode: Enable pycodestyle linting

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -525,5 +525,6 @@
             "viewType": "jupyter.notebook.ipynb",
             "filenamePattern": "*.ipynb"
         }
-    ]
+    ],
+    "python.linting.pycodestyleEnabled": true
 }
