vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -198,6 +198,7 @@
         "Konsole",
         "Kotipizza",
         "Kreatel",
+        "LDAP",
         "LDFLAGS",
         "Loggable",
         "Lundberg",
@@ -227,6 +228,7 @@
         "Postgres",
         "RXDESC",
         "Rubo",
+        "SASL",
         "SIGKILL",
         "SIGTERM",
         "SYSCALL",
@@ -284,6 +286,7 @@
         "customised",
         "dconf",
         "deallocation",
+        "debootstrap",
         "destkeypass",
         "destkeystore",
         "deststorepass",
@@ -339,8 +342,11 @@
         "lakto",
         "leveldb",
         "libgnomekbd",
+        "libldap",
+        "libpq",
         "lnyberg",
         "loveth",
+        "lpass",
         "lxdbr",
         "mariadb",
         "markdownify",
@@ -376,6 +382,7 @@
         "pgroup",
         "pids",
         "pipenv",
+        "pkill",
         "plundberg",
         "postgresql",
         "precompile",
@@ -386,6 +393,7 @@
         "proto",
         "protobuf",
         "protoevangelium",
+        "psql",
         "qunit",
         "r",
         "rackup",
