--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -296,8 +296,10 @@
         "docfx",
         "downcase",
         "downto",
+        "dpkg",
         "dylib",
         "ecraft",
+        "egrep",
         "enqueues",
         "eval",
         "executables",
@@ -305,6 +307,7 @@
         "favourite",
         "fieldops",
         "findutils",
+        "gecos",
         "genrsa",
         "getpgid",
         "getpid",
@@ -340,6 +343,8 @@
         "ktiges",
         "lagiskheten",
         "lakto",
+        "ldapadd",
+        "ldif",
         "leveldb",
         "libgnomekbd",
         "libldap",
@@ -412,6 +417,7 @@
         "sigchild",
         "simplecov",
         "skogen",
+        "slapd",
         "slovdahl",
         "spendrups",
         "sprintf",
