(vscode) Use shellscript syntax for .profile_secrets
This is a file supported by these dotfiles in which you can place your
"secrets" (like API keys, passwords and other things you don't want to
publish in a public repo)

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -111,7 +111,8 @@
         ".ansible-lint": "yaml",
         "*_hosts": "ini",
         "tomcat8": "shellscript",
-        "*.partial": "mustache"
+        "*.partial": "mustache",
+        ".profile_secrets": "shellscript"
     },
 
     // Display the spell checker status on the status bar.
