(vscode) Update wordlist + new sorting
The wordlist was previously sorted case-sensitively so that all
Upper-initial words came before the lower-intial ones. This has changed
in a recent VS Code/extension update, so that's why this commit looks a
bit more messy than it ought to be.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -155,150 +155,60 @@
 
     "cSpell.language": "en,sv",
     "cSpell.userWords": [
-        "ALPN",
-        "AXFR",
+        "adoptopenjdk",
+        "agapao",
+        "agentd",
         "Allsm",
         "Allsmäktiges",
+        "ALPN",
         "Amalekites",
         "Amorites",
         "Anak",
         "Ansible's",
-        "Arcieri",
-        "Armeria",
-        "Asynchrony",
-        "BSON",
-        "Bahnhof",
-        "Brändö",
-        "CFLAGS",
-        "CHLD",
-        "CONO",
-        "Citrix",
-        "Cors",
-        "Dashevskii's",
-        "Dlogback",
-        "EADDRINUSE",
-        "ECDHE",
-        "ECONNREFUSED",
-        "EEPROM",
-        "EEST",
-        "ENOENT",
-        "ENVVARSDOCS",
-        "ESRCH",
-        "Errno",
-        "Excon",
-        "FOSS",
-        "Finalizer",
-        "Fixnum",
-        "Fransmanni",
-        "Gemfile",
-        "HTTPOK",
-        "Havilah",
-        "Hejlsberg",
-        "Hiddekel",
-        "Hubi",
-        "ICMP",
-        "Interruptible",
-        "Interruptibly",
-        "JDBC",
-        "JDWP",
-        "Jasså",
-        "Jebusites",
-        "Jephunneh",
-        "Kadesh",
-        "Karabiner",
-        "Klipper",
-        "Konsole",
-        "Kotipizza",
-        "Kreatel",
-        "LDAP",
-        "LDFLAGS",
-        "LDIF",
-        "Loggable",
-        "Lundberg",
-        "MSYS",
-        "Matz",
-        "Memoized",
-        "Micael",
-        "Mixlib",
-        "Moren",
-        "NOPASSWD",
-        "NOTIME",
-        "Nanos",
-        "Noas",
-        "Noindex",
-        "Nokto",
-        "Npgsql",
-        "Nystrom's",
-        "Oleg",
-        "Owin",
-        "PEBKAC",
-        "PKCS",
-        "POSIX",
-        "PREPEND",
-        "Paran",
-        "Paulus",
-        "Pison",
-        "Postgre",
-        "Postgres",
-        "RXDESC",
-        "Rubo",
-        "SASL",
-        "SIGKILL",
-        "SIGTERM",
-        "SYSCALL",
-        "Samarien",
-        "Serializable",
-        "Silverlight",
-        "Smedsby",
-        "Solf",
-        "Strongs",
-        "Strömsö",
-        "Sverige",
-        "TTFB",
-        "Testem",
-        "Trac",
-        "USID",
-        "Uncomment",
-        "Vasa",
-        "WNOHANG",
-        "Wasa",
-        "Wolffskavägen",
-        "Wärtsiläs",
-        "Zabbix",
-        "adoptopenjdk",
-        "agapao",
-        "agentd",
         "ansible",
         "appfactory",
+        "Arcieri",
         "arity",
+        "Armeria",
         "asciinema",
+        "Asynchrony",
         "autoinject",
         "axelf",
+        "AXFR",
         "b",
         "babysteps",
         "backend",
         "backtrace",
+        "Bahnhof",
         "besökelsetid",
-        "bzip",
         "bönegrupp",
         "bönespråk",
         "bönesvaren",
+        "Brändö",
+        "BSON",
+        "bzip",
         "cacert",
         "camelize",
         "caname",
         "canonicalize",
+        "CFLAGS",
         "changeit",
         "changelog",
         "chaosdev",
         "chdir",
+        "CHLD",
+        "Citrix",
         "cmocka",
         "conditionalize",
+        "CONO",
         "coreutils",
+        "Cors",
         "couchdb",
         "cpus",
         "crontab",
         "cslox",
         "customised",
+        "Dashevskii's",
         "dconf",
         "deallocation",
         "debootstrap",
@@ -307,22 +217,38 @@
         "deststorepass",
         "deststoretype",
         "devcert",
+        "Dlogback",
         "dnaip",
         "docfx",
         "downcase",
         "downto",
         "dpkg",
         "dylib",
+        "EADDRINUSE",
+        "ECDHE",
+        "ECONNREFUSED",
         "ecraft",
+        "EEPROM",
+        "EEST",
         "egrep",
+        "ENOENT",
         "enqueues",
+        "ENVVARSDOCS",
+        "Errno",
+        "ESRCH",
         "eval",
+        "Excon",
         "executables",
         "favicon",
         "favourite",
         "fieldops",
+        "Finalizer",
         "findutils",
+        "Fixnum",
+        "FOSS",
+        "Fransmanni",
         "gecos",
+        "Gemfile",
         "genrsa",
         "getpgid",
         "getpid",
@@ -332,54 +258,86 @@
         "graphql",
         "gsettings",
         "gsub",
+        "Havilah",
         "heartedly",
         "hebr",
+        "Hejlsberg",
         "hibox",
         "hiboxcentre",
         "hiboxsystems",
+        "Hiddekel",
         "hjärtesorg",
         "htmlbars",
+        "HTTPOK",
+        "Hubi",
+        "ICMP",
         "ifeq",
         "initrd",
         "inkey",
         "inodes",
         "intellisense",
+        "Interruptible",
+        "Interruptibly",
         "iptables",
         "ironmq",
         "jacoco",
+        "Jasså",
         "javax",
         "jcmd",
+        "JDBC",
+        "JDWP",
+        "Jebusites",
+        "Jephunneh",
         "jlox",
         "journalctl",
         "jsonapi",
+        "jstack",
+        "Kadesh",
+        "Karabiner",
         "kernelfs",
         "keyalg",
         "keypasswd",
         "klass",
+        "Klipper",
+        "Konsole",
+        "Kotipizza",
+        "Kreatel",
         "ktiges",
         "lagiskheten",
         "lakto",
+        "LDAP",
         "ldapadd",
+        "LDFLAGS",
+        "LDIF",
         "leveldb",
         "libgnomekbd",
         "libldap",
         "libpq",
         "lnyberg",
+        "Loggable",
         "loveth",
         "lpass",
+        "Lundberg",
         "lxdbr",
         "mariadb",
         "markdownify",
+        "Matz",
+        "Memoized",
+        "Micael",
         "mixins",
+        "Mixlib",
         "mkdir",
         "modifyvm",
+        "Moren",
         "moveth",
+        "MSYS",
         "mtime",
         "mutex",
         "mydomain",
         "mysqld",
         "naanbröd",
         "nada",
+        "Nanos",
         "neighbour",
         "nemo",
         "nespr",
@@ -388,26 +346,45 @@
         "networkd",
         "nginx",
         "nictype",
+        "Noas",
+        "Noindex",
+        "Nokto",
+        "NOPASSWD",
         "noprompt",
+        "NOTIME",
+        "Npgsql",
         "nvidia",
+        "Nystrom's",
         "obiblisk",
+        "Oleg",
         "oninput",
         "openjdk",
         "openssl",
         "ostruct",
+        "Owin",
         "pacman",
         "paginator",
         "paramiko",
+        "Paran",
         "passthrough",
+        "Paulus",
+        "PEBKAC",
         "perlun",
         "pescetarian",
+        "pgrep",
         "pgroup",
         "pids",
         "pipenv",
+        "Pison",
+        "PKCS",
         "pkill",
         "plundberg",
+        "POSIX",
+        "Postgre",
+        "Postgres",
         "postgresql",
         "precompile",
+        "PREPEND",
         "prepended",
         "printf",
         "prio",
@@ -420,6 +397,7 @@
         "qunit",
         "r",
         "rackup",
+        "rättfärdiggörelse",
         "rdigg",
         "readfp",
         "relse",
@@ -430,13 +408,22 @@
         "rstrip",
         "rsync",
         "rtrim",
+        "Rubo",
         "rubocop",
-        "rättfärdiggörelse",
+        "RXDESC",
+        "Samarien",
+        "SASL",
+        "Serializable",
         "sigchild",
+        "SIGKILL",
+        "SIGTERM",
+        "Silverlight",
         "simplecov",
         "skogen",
         "slapd",
         "slovdahl",
+        "Smedsby",
+        "Solf",
         "spendrups",
         "sprintf",
         "srckeystore",
@@ -444,22 +431,30 @@
         "srcstoretype",
         "sshd",
         "strftime",
+        "Strömsö",
+        "Strongs",
         "strptime",
         "struct",
         "sudoers",
+        "Sverige",
+        "SYSCALL",
         "syslog",
         "systemctl",
         "tada",
+        "Testem",
         "tetris",
         "textblock",
         "textblocks",
         "tillbedjare",
         "timestamps",
         "tocrel",
+        "Trac",
         "transpiler",
         "trello",
         "ttf",
+        "TTFB",
         "uartmode",
+        "Uncomment",
         "uncommented",
         "unencrypted",
         "unmanaged",
@@ -467,14 +462,21 @@
         "unshift",
         "upcase",
         "upto",
+        "USID",
         "utlevd",
         "uuid",
         "uxfactory",
+        "Vasa",
         "venv",
         "virtio",
         "virtualized",
         "waitpid",
-        "workerd"
+        "Wärtsiläs",
+        "Wasa",
+        "WNOHANG",
+        "Wolffskavägen",
+        "workerd",
+        "Zabbix"
     ],
     "C_Cpp.intelliSenseEngine": "Default",
     "C_Cpp.suggestSnippets": false,
