(vscode) Disable workspace trust management
I consider this feature too intrusive for me. While I do appreciate the
intent to protect people from malicious code (e.g. arbitrary Groovy code
in Gradle projects), I don't work with "untrusted" projects to the lever
where I currently find this to be motivated. Time will tell if I will
regret this or not...

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -562,7 +562,6 @@
         "*.ipynb": "jupyter.notebook.ipynb"
     },
     "python.linting.pycodestyleEnabled": true,
-    "window.zoomLevel": 1,
     "oneDarkPro.vivid": false,
     "python.languageServer": "Pylance",
     "yaml.customTags": [
@@ -573,5 +572,7 @@
     "redhat.telemetry.enabled": false,
     "python.defaultInterpreterPath": "python2.7-dbg",
     "security.workspace.trust.untrustedFiles": "open",
-    "workbench.colorTheme": "One Dark Pro"
+    "workbench.colorTheme": "One Dark Pro",
+    "security.workspace.trust.enabled": false,
+    "window.zoomLevel": 1
 }
