vscode: Disable editor.comments.insertSpace
Sometimes, it's useful to comment out code without having extra spaces inserted.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -577,5 +577,6 @@
     "security.workspace.trust.untrustedFiles": "open",
     "workbench.colorTheme": "One Dark Pro",
     "security.workspace.trust.enabled": false,
-    "window.zoomLevel": 1
+    "window.zoomLevel": 1,
+    "editor.comments.insertSpace": false
 }
