--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -316,6 +316,7 @@
         "libgnomekbd",
         "libldap",
         "libpq",
+        "libtcnative",
         "lnyberg",
         "Loggable",
         "loveth",
