--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -376,6 +376,7 @@
         "PEBKAC",
         "perlun",
         "pescetarian",
+        "pfsense",
         "pgrep",
         "pgroup",
         "pids",
