(vscode) Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -219,6 +219,7 @@
         "deststorepass",
         "deststoretype",
         "devcert",
+        "dhparams",
         "Dlogback",
         "dnaip",
         "docfx",
@@ -461,6 +462,7 @@
         "ttf",
         "TTFB",
         "uartmode",
+        "ulong",
         "Uncomment",
         "uncommented",
         "unencrypted",
