(quicktile) Add instructions for configuring QuickTile

--- a/quicktile-laptop.cfg
+++ b/quicktile-laptop.cfg
@@ -1,3 +1,7 @@
+# To setup this config file to be loaded with QuickTile, use this:
+#
+#   ln -sf $(readlink -f quicktile-laptop.cfg) ~/.config/quicktile.cfg
+
 [general]
 cfg_schema = 1
 ColumnCount = 3
@@ -15,4 +19,3 @@ I = top
 O = top-right
 comma = bottom
 period = bottom-right
-
