--- a/quicktile.cfg
+++ b/quicktile.cfg
@@ -1,3 +1,7 @@
+# To setup this config file to be loaded with QuickTile, use this:
+#
+#   ln -sf $(readlink -f quicktile.cfg) ~/.config/quicktile.cfg
+
 [general]
 cfg_schema = 1
 ColumnCount = 3
@@ -20,4 +24,3 @@ KP_7 = top-left
 KP_8 = top
 KP_9 = top-right
 KP_Enter = monitor-switch
-
