(quicktile) Update config to get rid of deprecation

--- a/quicktile.cfg
+++ b/quicktile.cfg
@@ -18,7 +18,7 @@ KP_1 = bottom-left
 KP_2 = bottom
 KP_3 = bottom-right
 KP_4 = left
-KP_5 = middle
+KP_5 = center
 KP_6 = right
 KP_7 = top-left
 KP_8 = top
