--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -586,5 +586,6 @@
     "window.zoomLevel": 1,
     "editor.comments.insertSpace": false,
     "markdown.preview.scrollPreviewWithEditor": false,
-    "markdown.preview.scrollEditorWithPreview": false
+    "markdown.preview.scrollEditorWithPreview": false,
+    "editor.fontFamily": "DejaVu Sans Mono"
 }
