(profile) Add `hcloud` bash completion

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -267,6 +267,7 @@
         "heartedly",
         "hebr",
         "Hejlsberg",
+        "HETZNER",
         "hibox",
         "hiboxcentre",
         "hiboxsystems",
