(vscode) Set tabSize for `.toml` files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -72,6 +72,10 @@
         "editor.tabSize": 2
     },
 
+    "[toml]": {
+        "editor.tabSize": 2
+    },
+
     "[xml]": {
         "editor.tabSize": 2
     },
