(vscode) Update settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -602,5 +602,6 @@
     "markdown.preview.scrollPreviewWithEditor": false,
     "markdown.preview.scrollEditorWithPreview": false,
     "editor.fontFamily": "DejaVu Sans Mono",
-    "window.zoomLevel": 1
+    "window.zoomLevel": 1,
+    "workbench.editor.empty.hint": "hidden"
 }
