--- a/quicktile.cfg
+++ b/quicktile.cfg
@@ -8,6 +8,8 @@ ColumnCount = 3
 UseWorkarea = True
 ModMask = <Ctrl><Alt>
 MovementsWrap = True
+MarginX_Percent = 0
+MarginY_Percent = 0
 
 [keys]
 # C = move-to-center
@@ -24,3 +26,4 @@ KP_7 = top-left
 KP_8 = top
 KP_9 = top-right
 KP_Enter = monitor-switch
+
