(vscode) Add words to wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -232,6 +232,7 @@
         "deststoretype",
         "devcert",
         "dhparams",
+        "direnv",
         "Dlogback",
         "dnaip",
         "docfx",
@@ -248,6 +249,7 @@
         "egrep",
         "ENOENT",
         "enqueues",
+        "envrc",
         "ENVVARSDOCS",
         "Errno",
         "ESRCH",
