(quicktile) Add auto-generated settings
These got added automatically to my config when I started a current
version of Quicktile.

--- a/quicktile-laptop.cfg
+++ b/quicktile-laptop.cfg
@@ -8,6 +8,8 @@ ColumnCount = 3
 UseWorkarea = True
 ModMask = <Ctrl><Alt><Shift>
 MovementsWrap = True
+MarginX_Percent = 0
+MarginY_Percent = 0
 
 [keys]
 M = bottom-left
