--- a/quicktile.cfg
+++ b/quicktile.cfg
@@ -6,7 +6,7 @@
 cfg_schema = 1
 ColumnCount = 3
 UseWorkarea = True
-ModMask = <Ctrl><Alt>
+ModMask = <Ctrl><Alt><Shift>
 MovementsWrap = True
 MarginX_Percent = 0
 MarginY_Percent = 0
@@ -26,4 +26,3 @@ KP_7 = top-left
 KP_8 = top
 KP_9 = top-right
 KP_Enter = monitor-switch
-
