(quicktile) Use Ctrl-Alt for `ModMask` on desktop again
I changed my mind. The muscle memory is too strong. :-)

This reverts commit 67fd54a1773903a565ae19c1f7a9af85888a4332.

--- a/quicktile.cfg
+++ b/quicktile.cfg
@@ -6,7 +6,7 @@
 cfg_schema = 1
 ColumnCount = 3
 UseWorkarea = True
-ModMask = <Ctrl><Alt><Shift>
+ModMask = <Ctrl><Alt>
 MovementsWrap = True
 MarginX_Percent = 0
 MarginY_Percent = 0
@@ -26,3 +26,4 @@ KP_7 = top-left
 KP_8 = top
 KP_9 = top-right
 KP_Enter = monitor-switch
+
