(vscode) Add `git.openRepositoryInParentFolders` setting

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -618,5 +618,6 @@
         "plaintext": false,
         "markdown": false,
         "scminput": false
-    }
+    },
+    "git.openRepositoryInParentFolders": "never"
 }
