(vscode) Update settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -621,5 +621,6 @@
         "xml": false
     },
     "git.openRepositoryInParentFolders": "never",
-    "github.copilot.nextEditSuggestions.enabled": true
+    "github.copilot.nextEditSuggestions.enabled": true,
+    "docker.extension.enableComposeLanguageServer": false
 }
