(vscode) Disable `resource-limits` Kubernetes linter
This is a bit overly aggressive.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -635,5 +635,8 @@
     },
     "[github-actions-workflow]": {
         "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "vs-kubernetes": {
+        "disable-linters": ["resource-limits"],
     }
 }
