(starship) Add Kubernetes section
This enables display of the current Kubernetes context and namespace in
the prompt, if a special "magic file" is present in the current
directory.

--- a/starship.toml
+++ b/starship.toml
@@ -44,6 +44,11 @@ disabled = true
 [java]
 disabled = true
 
+[kubernetes]
+disabled = false
+detect_files = ['manifest-settings.yaml']
+#format = '[⛵ ($cluster in )$context \($namespace\)](cyan) '
+
 [nodejs]
 disabled = true
 
